apps/booktrack/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-booktrack-frontend
  namespace: booktrack
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: booktrack
    app.kubernetes.io/component: frontend
  ports:
  - port: 80
    targetPort: 8080
