apps/booktrack/base/frontend/ingress-backend-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-booktrack-backend-preview
  namespace: booktrack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: booktrack.example.com
    http:
      paths:
      # Backend FastApi
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: svc-booktrack-backend-green
            port:
              number: 8000
