apps/booktrack/base/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-booktrack-frontend
  namespace: booktrack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: booktrack.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-booktrack-frontend
            port:
              number: 80
      # Backend FastApi blue
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: svc-booktrack-backend
            port:
              number: 8000
      # Backend FastAPI green preview version
      - path: /api-preview(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: svc-booktrack-backend-preview
            port:
              number: 8000
